@@ -1,2 +1,3 @@
 # LingDouLuo
 一个简单的2d游戏
+需要将运行环境更改为虚拟机并在虚拟机一行输入javafx的lib的位置：--module-path "你的lib位置" --add-modules javafx.controls,javafx.fxml,javafx.media
